--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,7 +85,7 @@ body{
       margin-top:1rem;
       box-shadow:1px 1px 5px rgba(0,0,0,.2);
       //@include gridBox( 23% ,43% ,34%);
-      @include gridBox( 23% ,43% ,29% ,5%);
+      @include gridBox( 12% ,39% ,44% ,5%);
     }
   }
   #expense-type{
@@ -108,6 +108,10 @@ body{
   #cost{
     text-align: right;
   }
+  #date{
+    font-weight:weight(bold);
+    font-size: 22px;
+  }
   #delete{
     text-align:right;
     margin-top: -40px;
@@ -116,6 +120,10 @@ body{
   }
   #delete:hover{
     color:red;
+  }
+  #report{
+    text-align: center;
+    color: $accent-color;
   }
 }
 
